<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.piotrswiatek.kalkulatordiabetyka.LoginActivity"
    android:gravity="top"
    android:background="#a3f6f0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_message_text"
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/login_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_text"
        android:id="@+id/user_name_textView"
        android:layout_below="@+id/login_textView"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/user_name_editText"
        android:layout_below="@+id/user_name_textView"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:id="@+id/password_textView"
        android:layout_below="@+id/user_name_editText"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_editText"
        android:layout_below="@+id/password_textView"
        android:layout_alignLeft="@+id/user_name_editText"
        android:layout_alignStart="@+id/user_name_editText"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_editText"
        android:padding="15dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logIn_btn"
            android:text="@string/btn_logIn_text"
            android:onClick="logInUser"
            android:clickable="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_user_btn"
            android:text="@string/btn_create_user_text"
            android:onClick="createUser"/>
    </LinearLayout>


</RelativeLayout>
